Fixed meme not scaling on mobile, text to large in areas on mobile, and made jumbotron bold.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -91,6 +91,11 @@ a.dark-primary-btn:hover {
   h1.display-3 {
     font-size: 2.5rem;
   }
+
+  img.meme {
+    width: 75vw;
+    height: auto;
+  }
 }
 
 // h1 {
